<resources>
    <string name="app_name">Incognito Browser</string>
    <string name="foreground_notification">Foreground notification</string>
    <string name="download_running">In progress</string>
    <string name="finished">Finished</string>
    <string name="shutdown">Shutdown</string>
    <string name="elapsed_time_format_d_h_mm">%1$d d. %2$d h. %3$d m</string>
    <string name="elapsed_time_format_h_mm_ss">%1$d h. %2$d m. %3$d s</string>
    <string name="elapsed_time_format_mm_ss">%1$d m. %2$d s</string>
    <string name="elapsed_time_format_ss">%1$d s</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="unmetered_connections_only">Unmetered connections only</string>
    <string name="connect">Connect</string>
    <string name="add">Add</string>
    <string name="not_available">N/A</string>
    <string name="open_navigation_drawer">Open navigation drawer</string>
    <string name="close_navigation_drawer">Close navigation drawer</string>
    <string name="error_template">Error: %1$s</string>
    <string name="pause">Pause</string>
    <string name="resume">Resume</string>
    <string name="stop">Stop</string>
    <string name="stopped">Stopped</string>
    <string name="pending">Pending</string>
    <string name="delete">Delete</string>
    <string name="share">Share</string>
    <string name="menu">Menu</string>
    <string name="select_all">Select all</string>
    <string name="share_via">Share via</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="error">Error</string>
    <string name="file">File</string>
    <string name="folder">Folder</string>
    <string name="downloading_metadata">Downloading metadata</string>
    <string name="all">All</string>
    <string name="search">Search</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>
    <string name="close">Close</string>
    <string name="redownload">Redownload</string>
    <string name="Default">Default</string>
    <string name="warning">Warning</string>
    <string name="apply">Apply</string>
    <string name="report">Report</string>
    <string name="perm_denied_title">Permission denied</string>
    <string name="perm_denied_warning">Without this permission app can\'t save files in memory on some devices and versions of Android. The app will not work properly. Are you sure you want to deny this permission?</string>
    <string name="download_ticker_notify" formatted="false">Downloading %1$s</string>
    <string name="app_running_in_the_background">Incognito Downloader running in the background</string>
    <string name="pause_all">Pause all</string>
    <string name="resume_all">Resume all</string>
    <string name="download_finished_notify">Download finished</string>
    <string name="open_using">Open using</string>
    <string name="download_in_queue_ticker_notify" formatted="false">%1$s in queue</string>
    <string name="waiting_for_network">Waiting for network</string>
    <string name="waiting_for_retry">Waiting for retry</string>
    <string name="download_error_notify_title">Download error</string>
    <string name="applying_params_title">Applying params</string>
    <string name="applying_params_for_downloads">Applying params for downloads</string>
    <string name="applying_params_error_title" formatted="false">Applying params error for %1$s</string>
    <string name="add_download">Add download</string>
    <string name="download_link">Link</string>
    <string name="download_name">Name</string>
    <string name="download_size" formatted="false">Size: %1$s</string>
    <string name="download_retry">Retry</string>
    <string name="download_advanced">Advanced</string>
    <string name="download_user_agent">User agent</string>
    <string name="download_error_empty_link">Please enter link</string>
    <string name="download_error_empty_name">Please enter name</string>
    <string name="download_error_no_enough_free_space" formatted="false">Not enough free space: %1$s free, but file size is %2$s</string>
    <string name="download_error_name_is_not_correct" formatted="false">Correct name is \"%1$s\"</string>
    <string name="fetch_error_default_fmt" formatted="false">Error: %1$s</string>
    <string name="fetch_error_invalid_url" formatted="false">Invalid URL: %1$s</string>
    <string name="fetch_error_network_disconnected">network is disconnected</string>
    <string name="fetch_error_http_response" formatted="false">Error: server returned HTTP %1$d code</string>
    <string name="fetch_error_io" formatted="false">IO error: %1$s</string>
    <string name="unable_to_open_folder">Unable to open selected folder. Please try to select another folder</string>
    <string name="unable_to_create_file">Unable to create file. Please try to select another folder</string>
    <string name="partial_download_not_supported">This download doesn\'t support pause and downloading by pieces</string>
    <string name="download_pieces_number_title">Number of pieces</string>
    <string name="download_description">Description</string>
    <string name="select_folder_to_save">Select the folder to save</string>
    <string name="path">Path</string>
    <string name="storage_free_space" formatted="false">Free space: %1$s</string>
    <string name="add_download_error_invalid_url">Unable to add download: invalid URL</string>
    <string name="dialog_add_user_agent_title">Add user agent</string>
    <string name="fragment_title_queued">Queued</string>
    <string name="fragment_title_completed">Completed</string>
    <string name="download_list_empty">No downloads</string>
    <string name="share_url">Share URL</string>
    <string name="drawer_category">Category</string>
    <string name="drawer_category_others">Others</string>
    <string name="drawer_category_documents">Documents</string>
    <string name="drawer_category_images">Images</string>
    <string name="drawer_category_video">Video</string>
    <string name="drawer_category_apk">APK</string>
    <string name="drawer_category_audio">Audio</string>
    <string name="drawer_category_archives">Archives</string>
    <string name="drawer_status">Status</string>
    <string name="drawer_status_running">Running</string>
    <string name="drawer_status_stopped">Stopped</string>
    <string name="drawer_date_added">Date added</string>
    <string name="drawer_date_added_today">Today</string>
    <string name="drawer_date_added_yesterday">Yesterday</string>
    <string name="drawer_date_added_week">Week</string>
    <string name="drawer_date_added_month">Month</string>
    <string name="drawer_date_added_year">Year</string>
    <string name="drawer_sorting">Sorting</string>
    <string name="drawer_sorting_date_added">Date added</string>
    <string name="drawer_sorting_name">Name</string>
    <string name="drawer_sorting_size">Size</string>
    <string name="drawer_sorting_category">Category</string>
    <string name="drawer_sorting_no_sorting">No sorting</string>
    <string name="download_queued_progress_template" formatted="false">%1$s/%2$s \u2022 %3$s \u2022 %4$s/s</string>
    <string name="download_queued_template" formatted="false">%1$s/%2$s \u2022 %3$s</string>
    <string name="download_finished_template" formatted="false">%1$s \u2022 %2$s</string>
    <string name="download_details">Details</string>
    <string name="deleting">Deleting</string>
    <string name="delete_selected_download">Delete the selected download? This operation cannot be undone</string>
    <string name="delete_selected_downloads">Delete the selected downloads? This operation cannot be undone</string>
    <string name="delete_with_downloaded_file">Delete with downloaded file</string>
    <string name="dir_chooser_title">Folder selection</string>
    <string name="file_chooser_title">File selection</string>
    <string name="dialog_new_folder_title">New folder</string>
    <string name="error_dialog_new_folder">Unable to create a new folder</string>
    <string name="error_open_dir">Unable to open the folder</string>
    <string name="home_directory">Home</string>
    <string name="permission_denied">Permission denied</string>
    <string name="save_file">Save file</string>
    <string name="file_name">File name</string>
    <string name="error_file_exists">File already exists. Replace it?</string>
    <string name="file_name_is_empty">File name cannot be empty</string>
    <string name="system_manager">System manager</string>
    <string name="device_does_not_support_this_feature">Your device doesn\'t support this feature</string>
    <string name="system_file_manager_not_found">System file manager not found</string>
    <string name="replace_file">Replace file</string>
    <string name="detail_downloaded">Downloaded</string>
    <string name="detail_downloaded_format" formatted="false">%1$s/%2$s (%3$d%%)</string>
    <string name="detail_pieces">Pieces</string>
    <string name="detail_date_added">Date added</string>
    <string name="detail_user_agent">User agent</string>
    <string name="detail_md5_hash_sum">MD5</string>
    <string name="detail_sha256_hash_sum">SHA-256</string>
    <string name="calculate">Calculate</string>
    <string name="send_text_to_clipboard">Copy</string>
    <string name="text_copied_to_clipboard">Text copied to clipboard</string>
    <string name="pref_header_behavior">Behavior</string>
    <string name="pref_header_storage">Storage</string>
    <string name="pref_theme_category">Theme settings</string>
    <string name="pref_theme_title">Theme</string>
    <string-array name="pref_theme_entries">
        <item>Light</item>
        <item>Dark</item>
        <item>Black</item>
    </string-array>
    <string name="pref_notification_category">Notification settings</string>
    <string name="pref_progress_notify_title">Progress notification</string>
    <string name="pref_finish_notify_title">Finish notification</string>
    <string name="remove_ads_desc">Get rid of annoying ads from the whole app for lifetime [50% OFF]</string>
    <string name="user_agent_desc">Change User Agent. It allows you to mimic other browsers</string>
    <string name="default_search_engine_desc">Select the default Search Engine, while searching the web</string>
    <string name="feedback_desc">In case of any error or suggestion, please write to us. We will get back to you as soon as possible</string>
    <string name="rate_desc">Let us know what you think about this app</string>
    <string name="share_desc">Share this app with buddies</string>
    <string name="enjoy_using_our_app">Enjoy Using Our App?</string>
    <string name="how_do_you_feel">How do you feel about this app?</string>
    <string name="happy_desc">We would love to know how we can make Incognito Browser even better. And would really appreciate if you left a review on Google Play Store</string>
    <string name="happy">Happy</string>
    <string name="unhappy">Unhappy</string>
    <string name="confused">Confused</string>
    <string name="Share">Share</string>
    <string name="feedback">Feedback</string>
    <string name="extras">Extras</string>
    <string name="remove_ads">Remove Ads</string>
    <string name="go_premium">Go Premium</string>
    <string name="browsing_experience">Browsing Experience</string>
    <string name="user_agent">User Agent</string>
    <string name="enable_java_script">Enable JavaScript</string>
    <string name="enable_images">Enable Images</string>
    <string name="full_screen_mode">Full-Screen Mode</string>
    <string name="write_a_review">Write a review</string>
    <string name="contact_our_team">Contact our team</string>
    <string name="tell_your_friend">Tell your friend</string>
    <string name="tweet_about_us">Tweet about us!</string>
    <string name="post_on_facebook">Post on Facebook</string>
    <string name="default_search_engine">Default Search Engine</string>
</resources>