<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    tools:context=".browser.Rating.FirstRateActivity">

    <ImageView
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_above="@+id/tv_first_question"
        android:layout_centerHorizontal="true"
        android:padding="15dp"
        android:src="@mipmap/ic_launcher" />

    <TextView
        android:id="@+id/tv_first_question"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/ll_first_buttons"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/how_do_you_feel"
        android:textColor="@android:color/black"
        android:textSize="30sp"
        android:textStyle="bold" />

    <LinearLayout
        android:id="@+id/ll_first_buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical"
        android:padding="10dp">

        <Button
            style="@style/surveyButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:onClick="happy"
            android:text="@string/happy" />

        <Button
            style="@style/surveyButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:onClick="confused"
            android:text="@string/confused" />

        <Button
            style="@style/surveyButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:onClick="unhappy"
            android:text="@string/unhappy" />

        <Button
            style="@style/surveyButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="cancel"
            android:text="@string/cancel"
            android:textColor="@android:color/holo_red_dark" />

    </LinearLayout>

</RelativeLayout>