<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_scrollFlags="scroll|enterAlways"
    tools:context="com.androidbull.incognito.browser.SettingsActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@android:color/black" />


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/toolbar">

        <LinearLayout
            android:id="@+id/ll_main"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="16dp">

            <!--Remove Ads Layout-->
            <LinearLayout
                android:id="@+id/removeAdsLL"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <!--Go Premium Topic-->
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="16dp"
                    android:text="@string/go_premium"
                    android:textColor="@android:color/holo_blue_dark"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <!--Remove Ads-->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:onClick="removeAds"
                    android:orientation="vertical"
                    android:paddingLeft="16dp"
                    android:paddingTop="16dp"
                    android:paddingRight="16dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/remove_ads"
                        android:textColor="@color/black"
                        android:textStyle="bold" />

                    <TextView
                        style="@style/settingDescStyle"
                        android:text="@string/remove_ads_desc" />
                </LinearLayout>
            </LinearLayout>

            <!--Browsing Experience Topic-->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:text="@string/browsing_experience"
                android:textColor="@android:color/holo_blue_dark"
                android:textSize="20sp"
                android:textStyle="bold" />

            <!--UserAgent-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="userAgent"
                android:orientation="vertical"
                android:paddingLeft="16dp"
                android:paddingTop="16dp"
                android:paddingRight="16dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/user_agent"
                    android:textColor="@color/black"
                    android:textStyle="bold" />

                <TextView
                    style="@style/settingDescStyle"
                    android:text="@string/user_agent_desc" />
            </LinearLayout>
            <!--Search Engine-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="searchEngine"
                android:orientation="vertical"
                android:paddingLeft="16dp"
                android:paddingTop="16dp"
                android:paddingRight="16dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/default_search_engine"
                    android:textColor="@color/black"
                    android:textStyle="bold" />

                <TextView
                    style="@style/settingDescStyle"
                    android:text="@string/default_search_engine_desc" />
            </LinearLayout>

            <!--Enable Java Script-->
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="jsSettings"
                android:orientation="horizontal"
                android:paddingLeft="16dp"
                android:paddingTop="16dp"
                android:paddingRight="16dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_toStartOf="@+id/checkbox_js"
                    android:layout_toLeftOf="@+id/checkbox_js"
                    android:text="@string/enable_java_script"
                    android:textColor="@color/black"
                    android:textStyle="bold" />

                <CheckBox
                    android:id="@+id/checkbox_js"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:checked="true" />


            </RelativeLayout>
            <!--Enable Java Script-->
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="imagesSetting"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_toStartOf="@+id/checkboxImages"
                    android:layout_toLeftOf="@+id/checkboxImages"
                    android:padding="16dp"
                    android:text="@string/enable_images"
                    android:textColor="@color/black"
                    android:textStyle="bold" />

                <CheckBox
                    android:id="@+id/checkboxImages"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:checked="true"
                    android:paddingEnd="16dp"
                    android:paddingRight="16dp"
                    tools:ignore="RtlSymmetry" />


            </RelativeLayout>
            <!--Enable Java Script-->
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="fullScreen"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_toLeftOf="@+id/checkboxFullScreen"
                    android:padding="16dp"
                    android:text="@string/full_screen_mode"
                    android:textColor="@color/black"
                    android:textStyle="bold" />

                <CheckBox
                    android:id="@+id/checkboxFullScreen"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:checked="false"
                    android:paddingRight="16dp" />


            </RelativeLayout>

            <!--Promoted App-->
            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/gradient_bg_intro">

                <RelativeLayout
                    android:id="@+id/rl_promoted_app"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="20dp"
                    android:background="@drawable/promted_app_setting_bg"
                    android:onClick="promotedAppClicked"
                    android:orientation="vertical"
                    android:padding="10dp">

                    <ImageView
                        android:id="@+id/iv_promoted_app_icon"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_centerVertical="true"
                        android:src="@mipmap/ic_launcher" />

                    <TextView
                        android:id="@+id/tv_promoted_app_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_toRightOf="@+id/iv_promoted_app_icon"
                        android:paddingLeft="16dp"
                        android:textColor="@color/black"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/tv_promoted_app_desc"
                        style="@style/settingDescStyle"
                        android:layout_below="@+id/tv_promoted_app_name"
                        android:layout_toRightOf="@+id/iv_promoted_app_icon"
                        android:paddingLeft="16dp" />
                </RelativeLayout>
            </RelativeLayout>
            <!--Extras Topic-->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:text="@string/extras"
                android:textColor="@android:color/holo_blue_dark"
                android:textSize="20sp"
                android:textStyle="bold" />

            <!--Coffee Request-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="buyCoffee"
                android:orientation="vertical"
                android:paddingLeft="16dp"
                android:paddingTop="16dp"
                android:paddingRight="16dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Buy developer a Coffee"
                    android:textColor="@color/black"
                    android:textStyle="bold" />

                <TextView
                    style="@style/settingDescStyle"
                    android:text="Buy a coffee for developer to make him stay active for extra hour." />
            </LinearLayout>

            <!--Feedback-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="feedback"
                android:orientation="vertical"
                android:paddingLeft="16dp"
                android:paddingTop="16dp"
                android:paddingRight="16dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/feedback"
                    android:textColor="@color/black"
                    android:textStyle="bold" />

                <TextView
                    style="@style/settingDescStyle"
                    android:text="@string/feedback_desc" />
            </LinearLayout>
            <!--Rate-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="rate"
                android:orientation="vertical"
                android:paddingLeft="16dp"
                android:paddingTop="16dp"
                android:paddingRight="16dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/enjoy_using_our_app"
                    android:textColor="@color/black"
                    android:textStyle="bold" />

                <TextView
                    style="@style/settingDescStyle"
                    android:text="@string/rate_desc" />
            </LinearLayout>

            <!--Rate-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="share"
                android:orientation="vertical"
                android:paddingLeft="16dp"
                android:paddingTop="16dp"
                android:paddingRight="16dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Share"
                    android:textColor="@color/black"
                    android:textStyle="bold" />

                <TextView
                    style="@style/settingDescStyle"
                    android:text="@string/share_desc" />
            </LinearLayout>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="about"
                android:padding="16dp"
                android:text="@string/about"
                android:textColor="@android:color/black"
                android:textStyle="bold" />
            <!--   <TextView
                 android:textStyle="bold"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:padding="16dp"
                 android:onClick="partnerShip"
                 android:text="@string/contact_us_line"
                 android:textColor="@android:color/black"/>
         -->
        </LinearLayout>
    </ScrollView>


</RelativeLayout>
